instances/tekton/backstage/resource-generation/datacap/route/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: datacap-create
  namespace: tekton
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: mq-create
spec:
  to:
    kind: Service
    name: el-datacap-create
  tls: null
  port:
    targetPort: http-listener
